Add cache on Slack usersList
because it has a low threshold so it will be more convenient to
be able to work with cached data when we're throttled rather than
just crashing and having to wait for 1 minutes in those cases.
